apps/gnome-software: avoid double border when list is included in a box
In Updates view, the list of application is included in a box, which is
not present in other apps list. This produces an unnecessary double border.

Fixing this issue removing the border from row.list-box-app-row when in a box

--- a/gtk/src/light/gtk-3.0/_apps.scss
+++ b/gtk/src/light/gtk-3.0/_apps.scss
@@ -318,6 +318,11 @@ terminal-window {
   }
 }
 
+// Avoid double border when list in included in a box (e.g. Updates view)
+widget > box > list row.list-box-app-row {
+    border: none;
+}
+
 // Star color can not be set, so this gives the stars a background in the dark theme
 .star{
   @if $variant=='dark'{
